<resources>
    <string name="app_name">مدرسه من (معلم)</string>
    <string name="failed_server">failed</string>
    <string name="btn_login">ورود</string>
    <string name="btn_send">ارسال</string>
    <string name="btn_send_message">ارسال پیام به</string>
    <string name="btn_send_activity">تعریف فعالیت برای</string>
    <string name="btn_save">ذخیره</string>
    <string name="hint_username">نام کاربری</string>
    <string name="hint_url">آدرس ورودی</string>
    <string name="hint_school_name">نام مدرسه</string>
    <string name="hint_title_message">عنوان پیام</string>
    <string name="hint_title_activity">عنوان فعالیت</string>
    <string name="hint_desc_message">متن پیام</string>
    <string name="hint_desc_activity">توضیحات فعالیت</string>
    <string name="hint_password">رمز عبور</string>
    <string name="tab_profile">پروفایل</string>
    <string name="tab_students">دانش آموزان</string>
    <string name="tab_notifications">اعلانات</string>
    <string name="toast_empty_edittext">لطفا نام کاربری و رمز عبور خود را وارد کنید</string>
    <string name="toast_error_school">لطفا مدرسه خود را انتخاب کنید</string>
    <string name="toast_warning_duplicate_school">این مدرسه قبلا ثبت شده است</string>
    <string name="hello_blank_fragment">profile</string>
    <string name="priority">زنگ %1$d</string>
    <string name="btn_alive">حاضر</string>
    <string name="btn_absent">غایب</string>
    <string name="btn_late">تاخیر</string>
    <string name="toast_success_saved">اطلاعات با موفقیت ثبت شد</string>
    <string name="toast_success_notif">اعلان با موفقیت ارسال شد</string>
    <string name="btn_accept">تایید</string>
    <string name="toast_success_activity">فعالیت با موفقیت ثبت شد</string>
    <string-array name="notification_type">
        <item>عمومی-1</item>
        <item>دعوتنامه-2</item>
    </string-array>

    <string-array name="activity_type">
        <item>فعالیت اولیا-1</item>
        <item>فعالیت کلاسی-2</item>
        <item>کار دز منزل-3</item>
        <item>کوئیز-4</item>
    </string-array>
</resources>
