<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/space_10_dp">


    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="60dp"
        android:layout_height="60dp"

        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="2dp" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="@dimen/space_10_dp"
        android:layout_weight="1"
        android:gravity="right"
        android:text="نام و نام خانوادگی" />

    <Button
        android:id="@+id/btnAlive"
        android:layout_width="45dp"
        android:layout_height="38dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/shape_blue_blank"
        android:text="@string/btn_alive" />

    <Button
        android:id="@+id/btnAbsent"
        android:layout_width="45dp"
        android:layout_height="38dp"
        android:layout_gravity="center_vertical"

        android:background="@drawable/shape_blue_blank"
        android:text="@string/btn_absent" />

    <Button
        android:id="@+id/btnLate"
        android:layout_width="45dp"
        android:layout_height="38dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/shape_blue_blank"
        android:text="@string/btn_late" />

</LinearLayout>