<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar_layout" />


    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/space_20_dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="info.androidhive.bottomsheet.MainActivity"
        tools:showIn="@layout/activity_main">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtTitle"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:gravity="right|center"
            android:hint="@string/hint_title_message"
            android:inputType="text" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtMessage"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:gravity="right"
            android:hint="@string/hint_desc_message"
            android:inputType="textMultiLine" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="نوع پیام" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spnType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <!-- Adding bottom sheet after main content -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical"
        app:behavior_hideable="false"
        app:behavior_peekHeight="48dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:weightSum="3">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSendMessage"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/shape_blue_blank"
                android:text="@string/btn_send_message"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <!-- Your scrollable view -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <!-- Adding any other scroll view, with BottomSheetBehavior -->
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:behavior_peekHeight="312dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior" />


    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>