<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/space_10_dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtTitle"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/space_30_dp"
                android:gravity="right|center"
                android:hint="@string/hint_title_activity"
                android:inputType="text" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtDesc"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/space_30_dp"
                android:gravity="right"
                android:hint="@string/hint_desc_activity"
                android:inputType="textMultiLine" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_5_dp"
                android:text="نوع فعالیت:" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spnActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_30_dp">

            </androidx.appcompat.widget.AppCompatSpinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_5_dp"
                android:text="مهلت ارسال تا:" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btnDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_action_date"
                    android:text="انتخاب تاریخ" />

                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="جهت انتخاب تاریخ روی تقویم بزنید" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="vertical"
            app:behavior_hideable="false"
            app:behavior_peekHeight="48dp"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSend"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/shape_blue_blank"
                    android:text="@string/btn_send_activity"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

            <!-- Your scrollable view -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

            <!-- Adding any other scroll view, with BottomSheetBehavior -->
            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="android.support.design.widget.BottomSheetBehavior" />


        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>